--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ p{
     background-color: #E5EAF0;
     margin-left: -16px; /* Shift to align with the card padding */
     margin-right: -16px;
-
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
   .author {
@@ -64,7 +65,7 @@ p{
     font-size: 12px;
     margin-bottom: 16px;
     margin-top: 16px;
-    padding: 2px 16px;
+    padding: 20px 16px;
 
   
   }
